syntax = "proto3";

package com.sabre.centiva.offer.gke.api;

import "wolverine/TravelBank_AgencyManager/AgencyManager/api/offer_document_rq.proto";
import "wolverine/TravelBank_AgencyManager/AgencyManager/api/passenger_type.proto";
import "wolverine/TravelBank_AgencyManager/AgencyManager/api/transaction_summary.proto";
import "wolverine/TravelBank_AgencyManager/AgencyManager/api/transaction_type.proto";

message OfferCommissionRQ {
  string agent_identifier = 1;
  string agency_account_number = 2;
  string station_number = 3;
  string ticket_location = 4;
  TransactionTypes transaction_type = 5;
  string airline_id = 6;
  PassengerTypes passenger_type = 7;
  repeated OfferDocumentRQ offer_document_rqs = 8;
}

message OfferCommissionRS {
  string account_number = 1;
  string transaction_id = 2;
  string create_date = 3;
  TransactionSummary transaction_summary = 4;
}

service AgencyManagerService {
  rpc processOfferCommission(OfferCommissionRQ) returns (OfferCommissionRS);
}
